tests/dupe-exn/out.txt
error: redefined identifier: E
  ┌─ err.sml:1:17
  │
1 │ exception E and E
  │                 ^

typechecking failed
